Moved files to subdirectories organised per book.

--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -41,7 +41,7 @@ The OS images ensure that the different display mechanisms work correctly.
 
 {productname} {smr} supports POS terminals that boot using both BIOS and UEFI.
 For UEFI booting terminals, you will need to configure the EFI partition in the Saltboot formula.
-For more information on EFI in the Saltboot formula, see xref:specialized-guides:salt-formula-saltboot.adoc[].
+For more information on EFI in the Saltboot formula, see xref:specialized-guides:salt/salt-formula-saltboot.adoc[].
 
 
 
