--- a/modules/retail/pages/retail-offline.adoc
+++ b/modules/retail/pages/retail-offline.adoc
@@ -24,7 +24,7 @@ The parameter is measured in seconds, and defaults to [systemitem]``60``.
 SALT_TIMEOUT = 60
 ----
 
-For more about kernel parameters, see xref:specialized-guides:salt-formula-pxe.adoc[].
+For more about kernel parameters, see xref:specialized-guides:salt/salt-formula-pxe.adoc[].
 
 
 
@@ -36,7 +36,7 @@ The upgrade can then performed on the terminals when suitable.
 This functionality requires the terminal to have a dedicated service partition. A service partition is a partition mounted as `/srv/saltboot`.
 This partition must be created before the system partition and large enough to store a POS image.
 To ensure that terminals will always have such a partition, use the Saltboot formula for terminal hardware type to specify the partition details.
-For more information, see xref:specialized-guides:salt-formula-saltboot.adoc[].
+For more information, see xref:specialized-guides:salt/salt-formula-saltboot.adoc[].
 
 When the service partition is set up on the terminal, a POS image can be downloaded in advance by applying the `saltboot.cache_image` state:
 
