--- a/modules/retail/pages/retail-terminal-names.adoc
+++ b/modules/retail/pages/retail-terminal-names.adoc
@@ -5,7 +5,7 @@ Terminals can be named according to certain parameters, which can make it easier
 
 Naming schemes available are ``Hostname``, ``FQDN``, and ``HWType``.
 Naming scheme can be selected in the [guimenu]``Branch Network`` formula.
-For more information, see xref:specialized-guides:salt-formula-branchnetwork.adoc[].
+For more information, see xref:specialized-guides:salt/salt-formula-branchnetwork.adoc[].
 
 By default, terminals are named according to the ``Hostname`` naming scheme with the ``HWType`` scheme as a fallback.
 
@@ -27,8 +27,8 @@ B002.TOSHIBA-6140100-41BA03X-c643
 
 
 The [systemitem]``BranchID`` is the unique identifier for the branch server that the terminal is connected to.
-You can configure this value in the xref:specialized-guides:salt-formula-branchnetwork.adoc[] settings for the branch server.
-You can disable this prefix by toggling the [systemitem]``Do not prefix salt client ID with Branch ID`` checkbox in the xref:specialized-guides:salt-formula-branchnetwork.adoc[].
+You can configure this value in the xref:specialized-guides:salt/salt-formula-branchnetwork.adoc[] settings for the branch server.
+You can disable this prefix by toggling the [systemitem]``Do not prefix salt client ID with Branch ID`` checkbox in the xref:specialized-guides:salt/salt-formula-branchnetwork.adoc[].
 
 The [systemitem]``Manufacturer``, [systemitem]``ProductName``, and [systemitem]``SerialNumber`` are provided by the terminal hardware BIOS.
 If the terminal does not provide a serial number, it will be omitted from the terminal name.
@@ -55,13 +55,13 @@ B002.terminal-c643
 
 
 The [systemitem]``BranchID`` is the unique identifier for the branch server that the terminal is connected to.
-You can configure this value in the xref:specialized-guides:salt-formula-branchnetwork.adoc[] settings for the branch server.
-You can disable this prefix by toggling the [systemitem]``Do not prefix salt client ID with Branch ID`` checkbox in the xref:specialized-guides:salt-formula-branchnetwork.adoc[].
+You can configure this value in the xref:specialized-guides:salt/salt-formula-branchnetwork.adoc[] settings for the branch server.
+You can disable this prefix by toggling the [systemitem]``Do not prefix salt client ID with Branch ID`` checkbox in the xref:specialized-guides:salt/salt-formula-branchnetwork.adoc[].
 
 The [systemitem]``Hostname`` is the plain hostname (without domain part) of the terminal.
 
 The [systemitem]``UniqueID`` is the first four characters of a generated machine identification number.
-You can disable this behavior by toggling the [systemitem]``Do not append unique suffix to the salt client ID`` checkbox in the xref:specialized-guides:salt-formula-branchnetwork.adoc[].
+You can disable this behavior by toggling the [systemitem]``Do not append unique suffix to the salt client ID`` checkbox in the xref:specialized-guides:salt/salt-formula-branchnetwork.adoc[].
 
 
 
@@ -81,13 +81,13 @@ B002.terminal.example.com-c643
 
 
 The [systemitem]``BranchID`` is the unique identifier for the branch server that the terminal is connected to.
-You can configure this value in the xref:specialized-guides:salt-formula-branchnetwork.adoc[] settings for the branch server.
-You can disable this prefix by toggling the [systemitem]``Do not prefix salt client ID with Branch ID`` checkbox in the xref:specialized-guides:salt-formula-branchnetwork.adoc[].
+You can configure this value in the xref:specialized-guides:salt/salt-formula-branchnetwork.adoc[] settings for the branch server.
+You can disable this prefix by toggling the [systemitem]``Do not prefix salt client ID with Branch ID`` checkbox in the xref:specialized-guides:salt/salt-formula-branchnetwork.adoc[].
 
 The [systemitem]``FQDN`` is the fully qualified domain name of the terminal.
 
 The [systemitem]``UniqueID`` is the first four characters of a generated machine identification number.
-You can disable this behavior by toggling the [systemitem]``Do not append unique suffix to the salt client ID`` checkbox in the xref:specialized-guides:salt-formula-branchnetwork.adoc[].
+You can disable this behavior by toggling the [systemitem]``Do not append unique suffix to the salt client ID`` checkbox in the xref:specialized-guides:salt/salt-formula-branchnetwork.adoc[].
 
 
 
@@ -104,7 +104,7 @@ This section describes how to do this when DNS and DHCP services are managed by 
 .Procedure: Assigning IP Address and Hostname with Formulas
 
 . In the DHCP formula settings, navigate to [guimenu]``Hosts with Static IP Address`` and click btn:[Add Item].
-  For more information on the DHCP formula, see xref:specialized-guides:salt-formula-dhcpd.adoc[].
+  For more information on the DHCP formula, see xref:specialized-guides:salt/salt-formula-dhcpd.adoc[].
 . In the [guimenu]``Hostname`` field, type the hostname of the branch server.
 . In the [guimenu]``IP Address`` field, type the static IP address for the terminal.
   Ensure the IP address is within the range used by the branch server.
@@ -116,7 +116,7 @@ ethernet <terminal_MAC_address>
 . OPTIONAL: For multiple terminals, click btn:[Add Item] and fill in the details for each terminal.
 . Click btn:[Save Formula] to save the changes.
 . In the Bind formula settings, navigate to the A records of the appropriate non-reverse zone, and click btn:[Add Item].
-  For more information on the bind formula, see xref:specialized-guides:salt-formula-bind.adoc[].
+  For more information on the bind formula, see xref:specialized-guides:salt/salt-formula-bind.adoc[].
 . In the [guimenu]``Hostname`` field, type the hostname of the branch server.
 . In the [guimenu]``IP Address`` field, type the static IP address you assigned to the terminal in the DHCP formula settings.
 . OPTIONAL: For multiple terminals, click btn:[Add Item] and fill in the details for each terminal.
