--- a/modules/specialized-guides/pages/salt/salt-formula-yomi.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formula-yomi.adoc
@@ -27,7 +27,7 @@ systemctl restart salt-master.service
 ----
 
 When the formula package is installed, you need to install the PXE Yomi image on the client, boot the client you want to provision, and enable the Yomi formulas on the client.
-For more information on preparing Yomi clients for provisioning, see xref:specialized-guides:salt-yomi.adoc[].
+For more information on preparing Yomi clients for provisioning, see xref:specialized-guides:salt/salt-yomi.adoc[].
 
 
 
@@ -158,4 +158,4 @@ If you want to use LVM or RAID on your devices, click btn:[+] in the appropriate
 When you have completed and saved all the forms, apply the highstate.
 
 
-For more information about using Yomi, see xref:specialized-guides:salt-yomi.adoc[].
+For more information about using Yomi, see xref:specialized-guides:salt/salt-yomi.adoc[].
