--- a/modules/specialized-guides/pages/salt/salt-formulas-by-product.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formulas-by-product.adoc
@@ -5,7 +5,7 @@ Some formulas are installed by default with {productname}.
 Other official formulas can be installed as RPM packages.
 When the formula is installed, you can activate them using the {productname} {webui}.
 
-For information about writing custom formulas, see xref:specialized-guides:salt-formulas-custom.adoc[].
+For information about writing custom formulas, see xref:specialized-guides:salt/salt-formulas-custom.adoc[].
 
 
 == Install Formulas with Zypper
