--- a/modules/specialized-guides/pages/salt/salt-large-scale-tuning.adoc
+++ b/modules/specialized-guides/pages/salt/salt-large-scale-tuning.adoc
@@ -4,7 +4,7 @@
 {productname} is designed by default to work on small and medium scale installations.
 For installations with more than 1000 clients per {productname} Server, adequate hardware sizing and parameter tuning must be performed.
 
-For more information on managing large scale deployments, see xref:large-deployments:large-deployments-overview.adoc[].
+For more information on managing large scale deployments, see xref:specialized-guides:large-deployments/overview.adoc[].
 
 ////
 
