--- a/modules/specialized-guides/pages/salt/salt-rate-limiting.adoc
+++ b/modules/specialized-guides/pages/salt/salt-rate-limiting.adoc
@@ -26,7 +26,7 @@ Choosing a lower batch size will reduce system load and parallelism, but might r
 
 The batch size parameter sets the maximum number of clients that can execute a single action at the same time.
 Adjust the [systemitem]``java.salt_batch_size`` parameter.
-// Defaulte is 200 according to large-scale-tuning.adoc
+// Defaulte is 200 according to salt-large-scale-tuning.adoc
 Defaults to 200.
 
 Increasing the delay increases the chance that multiple clients will have completed before the next action is issued (more clients are grouped together in subsequent batches), resulting in fewer overall commands, and reducing load.
