--- a/modules/specialized-guides/pages/salt/salt-states-and-pillars.adoc
+++ b/modules/specialized-guides/pages/salt/salt-states-and-pillars.adoc
@@ -32,7 +32,7 @@ For more information on Salt states, see https://docs.saltproject.io/en/latest/t
 
 
 You can create custom Salt states with {productname}.
-For more information, see xref:specialized-guides:salt-custom-states.adoc[].
+For more information, see xref:specialized-guides:salt/salt-custom-states.adoc[].
 
 
 
