--- a/modules/specialized-guides/pages/salt/salt-yomi.adoc
+++ b/modules/specialized-guides/pages/salt/salt-yomi.adoc
@@ -65,7 +65,7 @@ systemctl restart salt-master.service
 ----
 
 
-For more information about the Yomi formula, see xref:specialized-guides:salt-formula-yomi.adoc[].
+For more information about the Yomi formula, see xref:specialized-guides:salt/salt-formula-yomi.adoc[].
 
 
 
@@ -180,7 +180,7 @@ When the key is accepted, you can view and manage the client by navigating to me
 Navigate to the [guimenu]``Formulas`` tab, and add all the Yomi Installer formulas to the client.
 When you have added all the formulas, complete the forms and sub-forms.
 This section outlines each form and provides example settings for a minimal installation.
-For a detailed explanation of every option, see xref:specialized-guides:salt-formula-yomi.adoc[].
+For a detailed explanation of every option, see xref:specialized-guides:salt/salt-formula-yomi.adoc[].
 
 
 Yomi::
