--- a/modules/retail/pages/retail-formulas-intro.adoc
+++ b/modules/retail/pages/retail-formulas-intro.adoc
@@ -4,7 +4,7 @@
 Formulas are pre-written Salt states, that are used to configure your {productname} {smr} installation.
 
 You can use the {productname} {webui} to apply common {productname} formulas.
-For the most commonly used formulas, see xref:specialized-guides:salt-formulas-intro.adoc[].
+For the most commonly used formulas, see xref:specialized-guides:salt/salt-formulas-intro.adoc[].
 
 All formulas must be accurately configured for your {productname} {smr} installation to function correctly.
 If you are unsure of the correct formula configuration details, run the [command]``retail_branch_init`` command before you begin to create the recommended formula configuration.
@@ -18,15 +18,15 @@ Branch servers are configured using formulas.
 Formulas can be configured using {productname} {webui}, or the {productname} XMLRPC API.
 To fully configure {productname} {smr}, these formulas need to be enabled and configured on the branch server:
 
-* Branch network formula, see xref:specialized-guides:salt-formula-branchnetwork.adoc[]
-* Bind formula, see xref:specialized-guides:salt-formula-bind.adoc[]
-* DHCPD formula, see xref:specialized-guides:salt-formula-dhcpd.adoc[]
-* PXE formula, see xref:specialized-guides:salt-formula-pxe.adoc[]
-* TFTP formula, see xref:specialized-guides:salt-formula-tftpd.adoc[]
-* VSFTP formula, see xref:specialized-guides:salt-formula-vsftpd.adoc[]
+* Branch network formula, see xref:specialized-guides:salt/salt-formula-branchnetwork.adoc[]
+* Bind formula, see xref:specialized-guides:salt/salt-formula-bind.adoc[]
+* DHCPD formula, see xref:specialized-guides:salt/salt-formula-dhcpd.adoc[]
+* PXE formula, see xref:specialized-guides:salt/salt-formula-pxe.adoc[]
+* TFTP formula, see xref:specialized-guides:salt/salt-formula-tftpd.adoc[]
+* VSFTP formula, see xref:specialized-guides:salt/salt-formula-vsftpd.adoc[]
 
 Optionally, you can also enable the image synchronization formula.
-For more information, see xref:specialized-guides:salt-formula-imagesync.adoc[].
+For more information, see xref:specialized-guides:salt/salt-formula-imagesync.adoc[].
 
 [IMPORTANT]
 ====
@@ -51,4 +51,4 @@ The highstate propagates your changes to the appropriate services.
 == Partitioning and Image Deployment Formula
 
 Use the Saltboot formula to specify disk partitioning, and to select which image should be deployed.
-For more information about the Saltboot formula, see xref:specialized-guides:salt-formula-saltboot.adoc[].
+For more information about the Saltboot formula, see xref:specialized-guides:salt/salt-formula-saltboot.adoc[].
