--- a/modules/specialized-guides/pages/large-deployments/tuning.adoc
+++ b/modules/specialized-guides/pages/large-deployments/tuning.adoc
@@ -253,7 +253,7 @@ This section contains information about the available parameters.
 | Example              | `java.salt_batch_size = 300`
 | After changing       | Check xref:memory-usage[memory usage].
                          Monitor memory usage closely before and after the change.
-| More information     | xref:specialized-guides:salt-rate-limiting.adoc[Salt Rate Limiting]
+| More information     | xref:specialized-guides:salt/salt-rate-limiting.adoc[Salt Rate Limiting]
 |===
 
 
@@ -272,7 +272,7 @@ This section contains information about the available parameters.
 | Value recommendation | 4-400 seconds
 | Location             | [path]``/etc/rhn/rhn.conf``
 | Example              | `java.salt_presence_ping_timeout = 40`
-| More information     | xref:specialized-guides:salt-timeouts.adoc[Salt Timeouts]
+| More information     | xref:specialized-guides:salt/salt-timeouts.adoc[Salt Timeouts]
 |===
 
 
@@ -292,7 +292,7 @@ This section contains information about the available parameters.
 | Value recommendation | 1-100 seconds
 | Location             | [path]``/etc/rhn/rhn.conf``
 | Example              | `java.salt_presence_ping_gather_job_timeout = 10`
-| More information     | xref:specialized-guides:salt-timeouts.adoc[Salt Timeouts]
+| More information     | xref:specialized-guides:salt/salt-timeouts.adoc[Salt Timeouts]
 |===
 
 
