--- a/modules/specialized-guides/pages/salt/salt-formulas-intro.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formulas-intro.adoc
@@ -17,4 +17,4 @@ The most commonly used formulas are documented in this section.
 
 Alternatively, you can use pre-written formulas as a starting point for your own custom formulas.
 Pre-written formulas are available from https://github.com/saltstack-formulas.
-For more information on custom formulas, see xref:specialized-guides:salt-formulas-custom.adoc[].
+For more information on custom formulas, see xref:specialized-guides:salt/salt-formulas-custom.adoc[].
