--- a/modules/specialized-guides/pages/salt/salt-scaling-minions.adoc
+++ b/modules/specialized-guides/pages/salt/salt-scaling-minions.adoc
@@ -4,7 +4,7 @@
 {productname} is designed by default to work on small and medium scale installations.
 For installations with more than 1000 clients per {productname} Server, adequate hardware sizing and parameter tuning must be performed.
 
-For more information on managing large scale deployments, see xref:specialized-guides:large-deployments-overview.adoc[].
+For more information on managing large scale deployments, see xref:specialized-guides:large-deployments/overview.adoc[].
 
 ////
 
@@ -179,7 +179,7 @@ Swap space use can have significant impacts on performance.
 If significant non-transient swap usage is detected, you can increase the available hardware RAM.
 
 You can also consider tuning the Server to consume less memory.
-For more information on tuning, see xref:salt:large-scale-tuning.adoc[].
+For more information on tuning, see xref:specialized-guides:salt/salt-large-scale-tuning.adoc[].
 
 === AES Key Rotation
 
