fix channels subcommand
per feedback

--- a/modules/client-configuration/pages/clients-sle.adoc
+++ b/modules/client-configuration/pages/clients-sle.adoc
@@ -87,7 +87,12 @@ mgr-sync list --help
 ----
 
 Then specify the argument you are interested in.
-For example, [literal]``-c channels``.
+For example, [literal]``channels``:
+
+----
+mgr-sync list channels [-c]
+----
+
 ====
 
 
