Register old SLE clients #16464 keichwa (#1347)
* register older sle clients
https://github.com/SUSE/spacewalk/issues/16464

--- a/modules/client-configuration/pages/clients-sle.adoc
+++ b/modules/client-configuration/pages/clients-sle.adoc
@@ -33,6 +33,49 @@ The products you need for this procedure are:
 
 include::snippets/add_channels_wizard.adoc[]
 
+include::snippets/addchannels_vendor_webui.adoc[]
+
+Alternatively, you can add channels at the command prompt.
+The channels you need for this procedure are:
+
+[[sle-channels-cli]]
+[cols="1,1", options="header"]
+.SLE Products - CLI
+|===
+
+| OS Version
+| Base Channel
+
+| {sles} 15 SP1
+| sle-product-sles15-sp1-pool-x86_64
+
+| {sles} 15 SP2
+| sle-product-sles15-sp2-pool-x86_64
+
+| {sles} 15 SP3
+| sle-product-sles15-sp3-pool-x86_64
+
+|===
+
+[NOTE]
+====
+To find channel names of older products, at the command prompt on the {productname} Server, as root, use the [command]``mgr-sync`` command:
+
+----
+mgr-sync list --help
+----
+
+Then specify the argument you are interested in.
+For example, [literal]``channels``:
+
+----
+mgr-sync list channels [-c]
+----
+
+====
+
+
+include::snippets/addchannels_vendor_cli.adoc[]
 
 
 ifeval::[{uyuni-content} == true]
