--- a/modules/client-configuration/pages/clients-sle.adoc
+++ b/modules/client-configuration/pages/clients-sle.adoc
@@ -1,9 +1,30 @@
 [[clients-sle]]
 = Registering {sle} Clients
 
-This section contains information about registering clients running {sle} operating systems.
+This section contains information about registering clients running these {sle} operating systems:
 
-// There are probably some support statements that we need to make here. Are SLE clients supported on Uyuni? --LKB 2020-08-12
+* {sles}{nbsp}15{nbsp}SP1
+* {sles}{nbsp}15{nbsp}SP2
+* {sles}{nbsp}15{nbsp}SP3
+
+////
+* {sles}{nbsp}12{nbsp}SP5
+* {sles} for SAP{nbsp}15{nbsp}SP2
+* {sles} for SAP{nbsp}12{nbsp}SP5
+////
+
+[NOTE]
+====
+Use the instructions in this chapter for preparing all {sle} products, including: 
+
+* {sles} for SAP 
+* {sle} Desktop 
+* {sle} 
+* {sle} Real Time
+
+You can also use these instructions for older {sle} versions and service packs.
+====
+
 
 
 == Add Software Channels
