SUSE Linux   Enterprise Server 11 clients also require previous SSL versions https://github.com/SUSE/spacewalk/issues/16465

--- a/modules/client-configuration/pages/tshoot-clients.adoc
+++ b/modules/client-configuration/pages/tshoot-clients.adoc
@@ -306,7 +306,7 @@ However, the Salt SSH clients store a log locally at [path]``/var/log/salt-ssh.l
 
 //* Result: the client is successfully registered
 
-To register and use {centos}{nbsp}6, {oracle}{nbsp}6, {rhel}{nbsp}6, or {sleses}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
+To register and use {centos}{nbsp}6, {oracle}{nbsp}6, {rhel}{nbsp}6, {sleses}{nbsp}6, or {sles} 11 clients, you need to configure the {productname} Server to support older types of SSL encryption.
 
 If you are attempting to register at the command prompt, you see an error like this:
 
