changes for clarity

--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -28,16 +28,15 @@ You can then check the [guimenu]``Has Signed Metadata?`` check box to match the 
 // This xref is misleading:
 // For more information on importing GPG keys, see xref:reference:systems/autoinst-gpg-and-ssl-keys.adoc[].
 
-If remote channels and repositories are signed with GPG keys, you can
-import and trusting these GPG keys.
-For example, execute the [command]``spacewalk-repo-sync`` from the command line on the {productname} Server; the {webui} does not offer this feature:
+If remote channels and repositories are signed with GPG keys, you can import and trust these GPG keys.
+For example, execute the [command]``spacewalk-repo-sync`` from the command line on the {productname} Server:
 
 ----
 /usr/bin/spacewalk-repo-sync -c <channellabelname> -t yum
 ----
 
-The underlying [command]``zypper`` call with import it, if the key is available.
-
+The underlying [command]``zypper`` call will import the key, if it is available.
+The {webui} does not offer this feature.
 
 
 
