install-server-unified.adoc: local -> locally

--- a/modules/installation-and-upgrade/pages/install-server-unified.adoc
+++ b/modules/installation-and-upgrade/pages/install-server-unified.adoc
@@ -60,7 +60,7 @@ image::unifiedinstaller-systemrole.png[scaledwidth=80%]
 ====
 The default {productname} server installation does not enable a
 graphical desktop environment. If you want to run setup tools such as
-{yast} with a graphical interface local on the {productname} server,
+{yast} with a graphical interface locally on the {productname} server,
 click [guimenu]``Software`` and select the [guimenu]``X Window System``
 pattern.
 ====
