Colelction of random checks.

--- a/modules/client-configuration/pages/registration-overview.adoc
+++ b/modules/client-configuration/pages/registration-overview.adoc
@@ -1,5 +1,5 @@
 [[registration-overview]]
-= Client Registration Overview
+= Client Registration
 
 There are several ways to register clients to your {productname} Server.
 This section covers the various available methods.
