--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -11,7 +11,7 @@ endif::[]
 
 * xref:installation-and-upgrade-overview.adoc[Installation/Upgrade Guide]
 ifeval::[{suma-content} == true]
-** xref:general-requirements.adoc[Requirements]
+** xref:general-requirements.adoc[General Requirements]
 *** xref:hardware-requirements.adoc[Hardware Requirements]
 endif::[]
 ifeval::[{uyuni-content} == true]
