--- a/modules/quickstart/pages/quickstart-install-suma-proxy.adoc
+++ b/modules/quickstart/pages/quickstart-install-suma-proxy.adoc
@@ -25,8 +25,7 @@ This guide shows you how to install and configure a single {susemgr} Proxy for x
 . When prompted, select [guimenu]``Installation``.
 // +
 // image::unifiedinstaller-install.png[scaledwidth=80%] (this image is with server selected.
-. In the [guimenu]``Language, Keyboard and Product Selection`` screen, check the [guimenu]``SUSE Manager Proxy`` checkbox, and click bb
-tn:[Next].
+. In the [guimenu]``Language, Keyboard and Product Selection`` screen, check the [guimenu]``SUSE Manager Proxy`` checkbox, and click btn:[Next].
 +
 image::unifiedinstaller-proxy.png[scaledwidth=80%]
 . Read and agree to the End User Licence Agreement, and click btn:[Next].
@@ -36,8 +35,7 @@ als, and click btn:[Next].
     [systemitem]``Basesystem``, [systemitem]``SUSE Manager Proxy``, and [systemitem]``Server Applications`` are pre-selected and mandatory for the {productname} Proxy installation.
     OPTIONAL: In the following [guimenu]``Add On Product`` screen, select any additional or add-on products you require, and click btn:[Next].
 . In the [guimenu]``System Role`` screen, check the [guimenu]``SUSE Manager Proxy`` checkbox, and click btn:[Next].
-. In the [guimenu]``Suggested Partitioning`` screen, accept the default values, or use the btn:[Guided Setup] or btn:[Expert Practitioo
-ner] options to customize your partitioning model, and click btn:[Next].
+. In the [guimenu]``Suggested Partitioning`` screen, accept the default values, or use the btn:[Guided Setup] or btn:[Expert Partitioner] options to customize your partitioning model, and click btn:[Next].
 . In the [guimenu]``Clock and Time Zone`` screen, enter your region and timezone, and click btn:[Next].
 . In the [guimenu]``Local Users`` screen, create a new user, and click btn:[Next].
 // . System Administrator "root" follows
