--- a/modules/retail/pages/retail-requirements.adoc
+++ b/modules/retail/pages/retail-requirements.adoc
@@ -1,5 +1,5 @@
 [[retail-requirements]]
-= Requirements
+= Retail Requirements
 
 Before you install {productname} {smr}, ensure your environment meets the minimum requirements.
 This section lists the requirements for the {productname} {smr} installation.
