--- a/modules/retail/nav-retail-guide.adoc
+++ b/modules/retail/nav-retail-guide.adoc
@@ -13,7 +13,7 @@ endif::[]
 ** xref:retail-components.adoc[Components]
 // Installation
 ** xref:retail-install.adoc[Installing]
-*** xref:retail-requirements.adoc[Requirements]
+*** xref:retail-requirements.adoc[Retail Requirements]
 ifeval::[{suma-content} == true]
 // The following file contains server, branch server, and build host installation:
 *** xref:retail-install-unified.adoc[Install with the Unified Installer]
