--- a/modules/client-configuration/pages/tshoot-clients.adoc
+++ b/modules/client-configuration/pages/tshoot-clients.adoc
@@ -111,6 +111,7 @@ mgr-create-bootstrap-repo --list --force
 ----
 mgr-create-bootstrap-repo --create SLE-12-SP2-x86_64 --force
 ----
+
 If you do not want to create bootstrap repositories manually, you can check whether LTSS is available for the product and bootstrap repository you need.
 
 
@@ -306,7 +307,7 @@ However, the Salt SSH clients store a log locally at [path]``/var/log/salt-ssh.l
 
 //* Result: the client is successfully registered
 
-To register and use {centos}{nbsp}6, {oracle}{nbsp}6, {rhel}{nbsp}6, or {sleses}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
+To register and use {centos}{nbsp}6, {oracle}{nbsp}6, {rhel}{nbsp}6, {sleses}{nbsp}6, or {sles} 11 clients, you need to configure the {productname} Server to support older types of SSL encryption.
 
 If you are attempting to register at the command prompt, you see an error like this:
 
