Sles11 clients req prev ssl#16465 keichwa (#1355)
* SUSE Linux Enterprise Server 11 clients also require previous SSL versions
https://github.com/SUSE/spacewalk/issues/16465

* drive-by edit:
separate final note from procedure

--- a/modules/client-configuration/pages/tshoot-clients.adoc
+++ b/modules/client-configuration/pages/tshoot-clients.adoc
@@ -76,6 +76,7 @@ mgr-create-bootstrap-repo --list --force
 ----
 mgr-create-bootstrap-repo --create SLE-12-SP2-x86_64 --force
 ----
+
 If you do not want to create bootstrap repositories manually, you can check whether LTSS is available for the product and bootstrap repository you need.
 
 
@@ -265,7 +266,7 @@ You can now import the new certificates to the {productname} Server, using the i
 
 //* Result: the client is successfully registered
 
-To register and use {centos}{nbsp}6, {oracle}{nbsp}6, {rhel}{nbsp}6, or {sleses}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
+To register and use {centos}{nbsp}6, {oracle}{nbsp}6, {rhel}{nbsp}6, {sleses}{nbsp}6, or {sles} 11 clients, you need to configure the {productname} Server to support older types of SSL encryption.
 
 If you are attempting to register at the command prompt, you see an error like this:
 
