--- a/modules/retail/pages/retail-terminal-names.adoc
+++ b/modules/retail/pages/retail-terminal-names.adoc
@@ -11,7 +11,7 @@ By default, terminals are named according to the ``Hostname`` naming scheme with
 
 
 
-=== Naming by ``HWType``
+== Naming by ``HWType``
 
 Terminal names that are derived from the hardware type use this format:
 
@@ -39,7 +39,7 @@ Without unique ID, subsequent terminal registration will fail.
 
 
 
-=== Naming by ``Hostname``
+== Naming by ``Hostname``
 
 Terminal names that are derived from the hostname use this format:
 
@@ -65,7 +65,7 @@ You can disable this behavior by toggling the [systemitem]``Do not append unique
 
 
 
-=== Naming by ``FQDN``
+== Naming by ``FQDN``
 
 Terminal names that are derived from the Fully Qualified Domain Names (FQDN) use this format:
 
@@ -91,7 +91,7 @@ You can disable this behavior by toggling the [systemitem]``Do not append unique
 
 
 
-=== Assign Hostnames to Terminals
+== Assign Hostnames to Terminals
 
 
 If you want terminal names to be derived from the hostname, you will need to ensure your terminals have a static hostname.
