--- a/modules/specialized-guides/pages/salt/salt-command.adoc
+++ b/modules/specialized-guides/pages/salt/salt-command.adoc
@@ -1,5 +1,5 @@
 [[salt.command]]
-= The Salt Command
+= Salt Command
 
 Salt commands have three main components: target, function, and arguments.
 The calls are constructed in this format:
