--- a/modules/specialized-guides/pages/salt/salt-file-locations.adoc
+++ b/modules/specialized-guides/pages/salt/salt-file-locations.adoc
@@ -117,5 +117,5 @@ Use this directory for custom Salt pillar data.
 [NOTE]
 ====
 You can use the [systemitem]``gitfs`` fileserver backend to serve Salt data from git repositories.
-For more information, see xref:salt-gitfs.adoc[].
+For more information, see xref:specialized-guides:salt/salt-gitfs.adoc[].
 ====
