--- a/modules/specialized-guides/pages/salt/salt-formula-tftpd.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formula-tftpd.adoc
@@ -1,7 +1,7 @@
 [[tftpd-formula]]
-= TFTPD Formula
+= TFTPd Formula
 
-The TFTPD formula is used to configure the TFTP service on the {productname} {smr} branch server.
+The TFTPd formula is used to configure the TFTP service on the {productname} {smr} branch server.
 
 
 
