--- a/modules/specialized-guides/pages/salt/salt-rate-limiting.adoc
+++ b/modules/specialized-guides/pages/salt/salt-rate-limiting.adoc
@@ -1,5 +1,5 @@
 [[salt.rate.limiting]]
-= Rate Limiting
+= Salt Rate Limiting
 
 Salt is able to run commands in parallel on a large number of clients.
 This can potentially create large amounts of load on your infrastructure.
