--- a/modules/specialized-guides/pages/salt/salt-yomi.adoc
+++ b/modules/specialized-guides/pages/salt/salt-yomi.adoc
@@ -1,5 +1,5 @@
 [[yomi.installer]]
-= Install with Yomi
+= Install Using Yomi
 
 Yomi (yet one more installer) is an installer for {suse} and openSUSE operating systems.
 Yomi is designed as a Salt state, and can be used for installing {suse} operating systems on new systems.
