moving slat clients

--- a/modules/client-configuration/pages/client-proxy.adoc
+++ b/modules/client-configuration/pages/client-proxy.adoc
@@ -21,4 +21,12 @@ You can see a list of clients that are connected to a proxy by clicking the name
 
 A list of chained proxies for a Salt client can be seen by clicking the name of the client in menu:Systems[All], then select the [guimenu]``Connection`` subtab of the [guimenu]``Details`` tab.
 
-If you decide to move any of your clients between proxies or the server you need to repeat the registration process from the beginning.
+
+
+== Move Clients between Proxies or the Server
+
+If you decide to move a traditional client between proxies or the server you need to repeat the registration process from the beginning.
+
+Moving Salt client can be done without the need to repeat the registration process.
+
+.Procedure
