salt first; conver caveat to a formal note

--- a/modules/client-configuration/pages/client-proxy.adoc
+++ b/modules/client-configuration/pages/client-proxy.adoc
@@ -23,10 +23,26 @@ A list of chained proxies for a Salt client can be seen by clicking the name of 
 
 
 
-== Move Clients between Proxies or the Server
+== Move Clients between Proxies
 
-If you decide to move a traditional client between proxies or the server you need to repeat the registration process from the beginning.
+You can move Salt and Salt SSH push clients between proxies without the need to repeat the registration process.
 
-Moving Salt client can be done without the need to repeat the registration process.
 
-.Procedure
+
+[NOTE]
+====
+If you want to move a traditional client between proxies or any client between chained proxies you must repeat the registration process from the beginning.
+====
+
+// Procede as follows:
+
+
+
+.Procedure: Moving Salt and Salt SSH Push Clients between Proxies
+
+
+
+== Move Clients from Proxies to the Server
+
+If you want to move any client from proxies to the server you must repeat the registration process from the beginning.
+
