Random corrections of page titles.

--- a/modules/installation-and-upgrade/pages/install-proxy-unified.adoc
+++ b/modules/installation-and-upgrade/pages/install-proxy-unified.adoc
@@ -1,5 +1,5 @@
 [[installation-proxy-unified]]
-= {productname} {productnumber} Proxy
+= Install {productname} {productnumber} Proxy
 
 {susemgr} Proxy is a {suse} product within the {sle} product family.
 This section describes how to install {susemgr} Proxy from {sle} installation media.
