--- a/modules/installation-and-upgrade/pages/install-server-unified.adoc
+++ b/modules/installation-and-upgrade/pages/install-server-unified.adoc
@@ -1,5 +1,5 @@
 [[install-server-unified]]
-= Installing {productname} {productnumber} Server
+= Install {productname} {productnumber} Server
 
 {susemgr} is a {suse} product within the {sle} product family.
 This section describes how to install {susemgr} Server from the {sle} installation media.
