--- a/modules/installation-and-upgrade/pages/ports.adoc
+++ b/modules/installation-and-upgrade/pages/ports.adoc
@@ -1,5 +1,5 @@
 [[ports]]
-= Network Ports
+= Required Network Ports
 
 This section contains a comprehensive list of ports that are used for various communications within {productname}.
 
