--- a/modules/retail/nav-retail-guide.adoc
+++ b/modules/retail/nav-retail-guide.adoc
@@ -10,9 +10,9 @@ endif::[]
 
 
 * xref:retail-overview.adoc[Retail Guide]
-** xref:retail-components.adoc[Components]
+** xref:retail-components.adoc[Retail Components]
 // Installation
-** xref:retail-install.adoc[Installing]
+** xref:retail-install.adoc[Retail Installation]
 *** xref:retail-requirements.adoc[Retail Requirements]
 ifeval::[{suma-content} == true]
 // The following file contains server, branch server, and build host installation:
@@ -24,7 +24,7 @@ ifeval::[{uyuni-content} == true]
 *** xref:retail-uyuni-branchserver.adoc[Uyuni Retail Branch Server]
 endif::[]
 *** xref:retail-network-arch.adoc[Network Architecture]
-*** xref:retail-install-setup.adoc[Set Up a Retail Environment]
+*** xref:retail-install-setup.adoc[Set Up Retail Environment]
 // Terminal ops
 ** xref:retail-deploy-section.adoc[Deploying Terminals]
 *** xref:retail-deploy-terminals.adoc[Terminal Deployment Basics]
@@ -43,7 +43,7 @@ endif::[]
 *** xref:retail-delta-images.adoc[Delta Images]
 *** xref:retail-admin-network.adoc[Network Administration]
 // Retail Upgrade
-** xref:retail-migration-intro.adoc[Retail Upgrade]
+** xref:retail-migration-intro.adoc[Retail Migration]
 ifeval::[{suma-content} == true]
 *** xref:retail-prepare-migration.adoc[Prepare for Migration]
 *** xref:retail-migration-slepostosuma.adoc[Migrate SLEPOS to SUMA]
