--- a/modules/retail/pages/retail-install.adoc
+++ b/modules/retail/pages/retail-install.adoc
@@ -1,5 +1,5 @@
 [[retail-install]]
-= Installation
+= Retail Installation
 
 ifeval::[{suma-content} == true]
 {productname} {smr} and {productname} {smr} Branch Server are installed using the {sles} Unified Installer.
