--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -29,8 +29,8 @@ endif::[]
 // Basic concepts
 ** xref:configuration-basics.adoc[Configuration Basics]
 *** xref:channels.adoc[Software Channels]
-**** xref:repositories.adoc[Repositories]
-**** xref:products.adoc[Products]
+**** xref:repositories.adoc[Software Repositories]
+**** xref:products.adoc[Software Products]
 *** xref:bootstrap-repository.adoc[Bootstrap Repository]
 *** xref:activation-keys.adoc[Activation Keys]
 *** xref:gpg-keys.adoc[GPG Keys]
