--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -1,5 +1,5 @@
 [[delete.clients]]
-= Delete Clients
+= Client Deletion
 
 If you need to remove a client from your {productname} Server, you can use the {webui} to delete it.
 This procedure works for both traditional and Salt clients.
