--- a/modules/quickstart/pages/quickstart-install-suma-proxy.adoc
+++ b/modules/quickstart/pages/quickstart-install-suma-proxy.adoc
@@ -12,7 +12,7 @@ For this topic we assume that you already have valid organization credentials wi
 
 
 // HW and SW Requirements from the snippet
-//OM 2022-01-10: include::snippets/sw_hw_requirements.adoc[]
+//include::snippets/sw_hw_requirements.adoc[]
 
 
 == Install {susemgr} Proxy
