--- a/modules/quickstart/pages/quickstart-install-suma-server.adoc
+++ b/modules/quickstart/pages/quickstart-install-suma-server.adoc
@@ -13,7 +13,7 @@ For this topic we assume that you already have valid organization credentials wi
 //The following table specifies the minimum requirements for installing SUMA Server.
 
 //HW and SW requirements from the snippet
-//OM 2022-01-10: include::snippets/sw_hw_requirements.adoc[]
+//include::snippets/sw_hw_requirements.adoc[]
 
 
 == Install {susemgr} Server 
