Change based on feedback.

--- a/modules/client-configuration/pages/contact-methods-intro.adoc
+++ b/modules/client-configuration/pages/contact-methods-intro.adoc
@@ -1,5 +1,5 @@
 [[contact-methods-intro]]
-= Client Management Methods (Contact Methods)
+= Client Management Methods
 
 There are a number of ways that the {productname} Server can communicate with clients.
 Which one you use depends on the type of client, and your network architecture.
