Collection of random checks (#1358)
* Colelction of random checks.

* Further corrections.

* Fixing broken links.

* Random corrections of page titles.

* Tidy up.

* Change based on feedback.

* Update modules/installation-and-upgrade/pages/client-requirements.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/retail/pages/retail-saltboot-diagram.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Change based on feedback.

Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/installation-and-upgrade/pages/install-pubcloud.adoc
+++ b/modules/installation-and-upgrade/pages/install-pubcloud.adoc
@@ -1,5 +1,5 @@
 [[install-pubcloud]]
-= Installing on a Public Cloud
+= Installation on Public Cloud
 
 Public clouds provide {productname} under a Bring Your Own Subscription (BYOS) model.
 That means that they pre-install {productname}, so you do not need to perform any installation steps.
