--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -28,9 +28,9 @@ endif::[]
 *** xref:supported-features-ubuntu.adoc[Ubuntu Supported Features]
 // Basic concepts
 ** xref:configuration-basics.adoc[Configuration Basics]
-*** xref:channels.adoc[Channels]
-**** xref:repositories.adoc[Repositories]
-**** xref:products.adoc[Products]
+*** xref:channels.adoc[Software Channels]
+**** xref:repositories.adoc[Software Repositories]
+**** xref:products.adoc[Software Products]
 *** xref:bootstrap-repository.adoc[Bootstrap Repository]
 *** xref:activation-keys.adoc[Activation Keys]
 *** xref:gpg-keys.adoc[GPG Keys]
@@ -47,10 +47,10 @@ endif::[]
 ** xref:registration-overview.adoc[Client Registration]
 // SLE Client Registration
 *** xref:registration-methods.adoc[Registration Methods]
-**** xref:registration-methods-saltbundle.adoc[Salt Bundle]
 **** xref:registration-webui.adoc[Register with the Web UI]
-**** xref:registration-bootstrap.adoc[Register with Bootstrap]
+**** xref:registration-bootstrap.adoc[Register with Bootstrap Script]
 **** xref:registration-cli.adoc[Register on the Command Line]
+**** xref:registration-methods-saltbundle.adoc[Register with Salt Bundle]
 // SUSE Client Registration
 *** xref:registration-overview-suse.adoc[SUSE Client Registration]
 **** xref:clients-sle.adoc[SUSE Linux Enterprise Clients]
