--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -11,7 +11,7 @@ endif::[]
 
 * xref:installation-and-upgrade-overview.adoc[Installation/Upgrade Guide]
 ifeval::[{suma-content} == true]
-** xref:general-requirements.adoc[Requirements]
+** xref:general-requirements.adoc[General Requirements]
 *** xref:hardware-requirements.adoc[Hardware Requirements]
 endif::[]
 ifeval::[{uyuni-content} == true]
@@ -89,7 +89,7 @@ ifeval::[{suma-content} == true]
 endif::[]
 #** xref:installation-and-upgrade:client-intro.adoc[Upgrade the Clients]
 *** xref:db-intro.adoc[Upgrade the Database]
-**** xref:db-migration-xy.adoc[Database - to Latest Version]
+**** xref:db-migration-xy.adoc[Database Migration to Latest Version]
 ** xref:troubleshooting.adoc[Troubleshooting]
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
