--- a/modules/client-configuration/pages/client-proxy.adoc
+++ b/modules/client-configuration/pages/client-proxy.adoc
@@ -38,7 +38,48 @@ If you want to move a traditional client between proxies or any client between c
 
 
 
-.Procedure: Moving Salt and Salt SSH Push Clients between Proxies
+.Procedure: Moving Salt or  Salt SSH Push Client between Proxies
+
+. In the {productname} {webui}, navigate to the [guimenu]``System Details`` page for the client you want to move between proxies.
+. Navigate to the [guimenu]``Connection`` tab.
+. From the [guimenu]``New Proxy`` drop-down menu select the proxy you want the client to move to, and click btn:[Change Proxy].
+
+
+
+.Procedure: Moving Multiple Salt or Salt SSH Push Clients between Proxies with SSM
+
+. In the {productname} {webui}, navigate to menu:Systems[System List] and check each client to move, this adds the clients to the system set manager.
+. Navigate to menu:Systems[System Set Manager], and go to the menu:Misc[Proxy]`` tab.
+. From the [guimenu]``New Proxy`` drop-down menu select the proxy you want the clients to move to, and click btn:[Change Proxy].
+
+
+
+The same functionality is also available with the [systemitem]``system.changeProxy`` API call.
+
+
+
+=== Background Information
+The effect of this function differs between normal Salt clients  and Salt SSH push clients.
+
+
+==== Normal Salt Clients
+
+It schedules salt state action, which modifies master: option
+in minion configuration (susemanager.conf) to point to the new proxy.
+Then it restarts the minion.
+
+Note: changing master: by manual editing of the minion configuration has
+the same effect and is supported too.
+
+When the minion restarts and reconnects via new proxy, the server updates the proxy
+path in the database and schedules another action for refreshing channel URLs.
+
+
+
+==== Salt SSH Push Clients
+
+The proxy path is updated immediately in the database and new action
+for refreshing channel URLs is scheduled.
 
 
 
